# feup-aed1

./: .gitignore  CMakeLists.txt  Doxyfile
data/: .~lock.students_classes.csv#
docs/output/html/: index.html
include/: Aula.h  BSTEstudante.h  Estudante.h  Gestor.h  OrdenarEstudantes.h  Pedido.h  TurmaH.h  UCTurma.h
src/: Aula.cpp  BSTEstudante.cpp  Estudante.cpp  Gestor.cpp  Pedido.cpp  TurmaH.cpp  UCTurma.cpp  main.cpp
